# MingW64-CMake-Libraries

./: CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
